force-app/main/default/objects/Photo__c/Photo__c.object-meta.xml
<CustomObject>
    <label>Photo</label>
    <nameField>
        <displayFormat>PH-{00000000}</displayFormat>
        <label>Photo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>