force-app/main/default/objects/Photo__c/fields/Geotag_Valid__c.field-meta.xml
<CustomField>
    <fullName>Geotag_Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Geotag Valid</label>
    <type>Checkbox</type>
</CustomField>