force-app/main/default/objects/Photo__c/fields/Photo_Type__c.field-meta.xml
<CustomField>
    <fullName>Photo_Type__c</fullName>
    <label>Photo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Install</fullName>
            </value>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Line Item Submission</fullName>
            </value>
            <value>
                <fullName>QI</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Site Not Ready</fullName>
            </value>
            <value>
                <fullName>FJ Evidence</fullName>
            </value>
            <value>
                <fullName>FJ Complete</fullName>
            </value>
            <value>
                <fullName>Takeoff</fullName>
            </value>
            <value>
                <fullName>Site Check</fullName>
            </value>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>