force-app/main/default/objects/Photo__c/fields/Portal_Visible__c.field-meta.xml
<CustomField>
    <fullName>Portal_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Visible</label>
    <type>Checkbox</type>
</CustomField>