force-app/main/default/objects/Photo__c/fields/QI_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>QI_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QI Line Item</label>
    <referenceTo>QI_Line_Item__c</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <type>Lookup</type>
</CustomField>