force-app/main/default/objects/Photo__c/fields/Taken_At__c.field-meta.xml
<CustomField>
    <fullName>Taken_At__c</fullName>
    <label>Taken At</label>
    <type>DateTime</type>
</CustomField>