force-app/main/default/objects/Photo__c/fields/Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Taken_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taken By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Photos Taken By</relationshipLabel>
    <relationshipName>Photos_Taken_By</relationshipName>
    <type>Lookup</type>
</CustomField>