force-app/main/default/objects/Photo__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Work_Order_Photos</relationshipName>
    <type>Lookup</type>
</CustomField>