force-app/main/default/objects/Photo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Photo_Type__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Taken_At__c</columns>
    <columns>Portal_Visible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>